# hive

./: .gitignore  ALL_PHASES_COMPLETE.md  CMakeLists.txt  LICENSE  Makefile  PHASE_2.5_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_VALIDATION.md  README.md  test_tui_compilation.sh
config/: hive-model.toml  project.rules.example
docs/: design-tokens.md
docs/arch/: agents.md  dynamics.md  overall.md  queen.md  signals.md
docs/bees/: dynamics.md
docs/prompts/dynamics/: 00-overview.md  01-role-mapping.md  02-architecture.md  03-pr-tasks.md  04-starter-code.md  05-tests-benchmarks.md  06-spawn-lifecycle.md  README.md
docs/prompts/inference_backend/: 00-overview.md  01-interface.md  02-adapters.md  03-starter-code.md  04-tests-benchmarks.md  05-pr-tasks.md  06-ollama-adapter.md  07-sapphire-adapter.md  08-copilotcli-adapter.md
docs/prompts/sandbox/: 00-overview.md  01-goals-constraints.md  02-threat-model.md  03-architecture.md  04-interfaces.md  05-adapters.md  06-starter-code.md  07-tests-benchmarks.md  08-pr-tasks.md  README.md
docs/prompts/skills/: 00-overview.md  01-architecture.md  02-spec.md  03-manifest.md  04-examples.md  05-integration.md  06-tests-benchmarks.md  07-rollout.md  README.md
docs/prompts/tools/: 00-overview.md  01-spec.md  02-security.md  03-implementation.md  04-tests.md  05-starter-code.md  README.md
docs/prompts/ui/: 00-overview.md  01-design-system-prompt.md  02-main-window-prompt.md  03-component-library-prompt.md  04-theme-and-styling-prompt.md  05-accessibility-performance-prompt.md  06-integration-and-tests-prompt.md  README.md
docs/test/: easy-01-scheduler-backoff.md  easy-02-runtime-env-vars.md  hard-01-checkpoint-recovery.md  medium-01-lineage-depth-cap.md  medium-02-parse-project-rules.md
src/: main.c
src/api/: server.c  server.h
src/cli/: cli.c  cli.h
src/common/: strings.c  strings.h
src/common/logging/: logger.c  logger.h
src/core/: agent.c  agent.h  coder.c  coder.h  dynamics.c  dynamics.h  editor.c  editor.h  evaluator.c  evaluator.h  model_config.c  model_config.h  orchestrator.c  orchestrator.h  planner.c  planner.h  reflexion.c  reflexion.h  runtime.c  runtime.h  session.c  session.h  state_machine.c  state_machine.h  tester.c  tester.h  types.c  types.h  verifier.c  verifier.h
src/core/agent/: agent.c  agent.h  coder.c  coder.h  editor.c  editor.h  orchestrator.c  orchestrator.h  planner.c  planner.h  tester.c  tester.h  tools_dispatch.c  tools_dispatch.h  verifier.c  verifier.h
src/core/dynamics/: buffer_injection.c  buffer_injection.h  dynamics.c  dynamics.h
src/core/evaluator/: evaluator.c
src/core/inference/: adapter.c  adapter.h  inference.c  inference.h
src/core/inference/adapters/copilotcli/: copilotcli.c  copilotcli.h
src/core/queen/: queen.c  queen.h
src/core/reflexion/: reflexion.c  reflexion.h
src/core/scheduler/: hive_config.h  scheduler.c  scheduler.h
src/core/trace/: trace.c  trace.h
src/gtk/: gtk.c  hive-theme.css  hive.gresource.xml  hive_gtk.h  main_window.c  main_window.h
src/gtk/components/: inspector_pane.c  inspector_pane.h  nav_list.c  nav_list.h  session_row.c  session_row.h  status_bar.c  status_bar.h
src/inference/: adapter.c  adapter.h  inference.c  inference.h
src/logging/: logger.c  logger.h
src/raygui/: raygui.c  raygui.h
src/tests/: scheduler_integration_test.c  signal_coordination_test.c
src/tools/: registry.c  registry.h
src/tui/: tui.c  tui.h
src/tui/components/: input.c  input.h  list.c  list.h  menu.c  menu.h  status_bar.c  status_bar.h
src/tui/pages/: backlog.c  backlog.h  dashboard.c  dashboard.h  queen.c  queen.h  settings.c  settings.h  status.c  status.h
